# file-sharing-server

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/croxx_fileshare/: package-lock.json  package.json
frontend/croxx_fileshare/public/: index.html
frontend/croxx_fileshare/src/: App.jsx
frontend/croxx_fileshare/src/components/: Form.jsx  Menu.jsx  form.css  menu.css
